--- a/java-sdk/build.gradle
+++ b/java-sdk/build.gradle
@@ -120,7 +120,7 @@ tasks.withType(JavaCompile) {
         options.errorprone {
             check("NullAway", CheckSeverity.ERROR)
             option("NullAway:AnnotatedPackages", "com.adobe.target")
-//            option("NullAway:AutoFix", "true")
+            option("NullAway:AutoFix", "true")
         }
         options.compilerArgs << "-Xmaxerrs" << "100000"
     }
