--- a/java-sdk/build.gradle
+++ b/java-sdk/build.gradle
@@ -22,6 +22,11 @@ repositories {
 
 apply plugin: 'edu.ucr.cs.riple.plugin'
 
+autoFixMode {
+    fixPath = "/tmp/NullAwayFix"
+    maximumRound = 20
+}
+
 javadoc {
     source = sourceSets.main.allJava
     classpath = configurations.compile
